--- a/app/api/settings/settings.json
+++ b/app/api/settings/settings.json
@@ -1,13 +1,11 @@
 {
-  "ios_ad": "rewarded_ad",
-  "android_ad": "rewarded_ad",
   "ios_ads": [
-    {"rewarded_test": 5},
-    {"rewarded_test": 1}
+    {"initial_ad": 5},
+    {"rewarded_ad": 1}
   ],
   "android_ads": [
-    {"rewarded_test": 5},
-    {"rewarded_test": 1}
+    {"initial_ad": 5},
+    {"rewarded_ad": 1}
   ],
   "ref": {
     "ios": {
